test/compilable/imports/test3254b.d
module imports.test3254b;

private void bar(float)
{
}

void bar(int)
{
}
