test/fail_compilation/aliasthis1.d

struct Foo
{
    int a;
    int b;

    alias a this;
    alias b this;
}

void main()
{

} 
